--- a/app/src/main/res/layout/activity_disp07.xml
+++ b/app/src/main/res/layout/activity_disp07.xml
@@ -46,7 +46,21 @@
             android:text="@string/btnHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnHome" android:onClick="tap_btnHome" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/btnHome" android:onClick="tap_btnHome"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnChange"/>
+            app:layout_constraintTop_toBottomOf="@+id/btnDelete"/>
+    <Button
+            android:text="@string/btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnDelete" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnChange"
+            android:onClick="tap_btnDelete"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/txtNUM" app:layout_constraintBottom_toTopOf="@+id/txtQuestion"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
