--- a/app/src/main/res/layout/activity_disp07.xml
+++ b/app/src/main/res/layout/activity_disp07.xml
@@ -13,7 +13,8 @@
             android:id="@+id/txtQuestion" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp" android:textSize="36sp"
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.316"/>
     <TextView
             android:text="@string/txtAnswer"
             android:layout_width="wrap_content"
@@ -21,7 +22,8 @@
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/txtAnswer" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txtQuestion" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp" android:textSize="36sp"
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.451"/>
     <Button
             android:text="@string/btnBack"
             android:layout_width="wrap_content"
@@ -57,4 +59,10 @@
             android:id="@+id/btnDelete" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnChange"
             android:onClick="tap_btnDelete"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp" android:id="@+id/txtListName" android:textSize="36sp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
