--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,9 +44,9 @@
             android:layout_height="wrap_content" android:id="@+id/btnWarpDisp07" app:layout_anchorGravity="end|top"
             app:layout_anchor="@+id/include" android:onClick="tap_btnWarpDisp07"/>
     <Button
-            android:text="Button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button"/>
+            android:layout_height="wrap_content" android:id="@+id/btnWarpDisp18" android:text="@string/btnWarpDisp18"
+            android:onClick="tap_btnWarpDisp18"/>
     <Button
             android:text="@string/btnWarpDisp08"
             android:layout_width="wrap_content"
