--- a/app/src/main/res/layout/activity_disp18.xml
+++ b/app/src/main/res/layout/activity_disp18.xml
@@ -11,7 +11,7 @@
             android:text="@string/txtQuestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView" android:textSize="36sp"
+            android:id="@+id/txtQuestion" android:textSize="36sp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textView3" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
@@ -59,4 +59,10 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
+    <Button
+            android:text="@string/btnTestEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnTestEnd" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:onClick="tap_btnTestEnd"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
