--- a/app/src/main/res/layout/content_disp02.xml
+++ b/app/src/main/res/layout/content_disp02.xml
@@ -17,7 +17,7 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.202"
-            app:layout_constraintVertical_bias="0.055"/>
+            app:layout_constraintVertical_bias="0.055" android:onClick="tap_btnList"/>
     <Button
             android:text="編集"
             android:layout_width="wrap_content"
