--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,5 +36,12 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/edit"
             app:layout_constraintHorizontal_bias="0.858" app:layout_constraintVertical_bias="0.363"/>
+    <Button
+            android:text="ファイル追加（テスト用）"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnFileTest" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="tap_btnFileTest"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
