--- a/app/src/main/res/layout/activity_disp08.xml
+++ b/app/src/main/res/layout/activity_disp08.xml
@@ -21,24 +21,33 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:onClick="tap_btnAdd"/>
     <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/strQuestion"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="@string/strQuestion"
-            android:ems="10"
-            android:id="@+id/strQuestion" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.516"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/strAnswer"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" android:ems="10"
+            android:hint="問題文を入力してください"
+            android:inputType="textMultiLine|textPersonName"
+            android:lines="3"
+            android:maxLength="60"
+            android:maxLines="3"
+            app:layout_constraintBottom_toTopOf="@+id/strAnswer" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.55"/>
     <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/strAnswer"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="@string/strAnswer"
-            android:ems="10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/strAnswer" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" android:ems="10" android:hint="解答文を入力してください"
+            android:inputType="textMultiLine|textPersonName"
+            android:lines="3"
+            android:maxLength="60"
+            android:maxLines="3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
