--- a/app/src/main/res/layout/activity_disp11.xml
+++ b/app/src/main/res/layout/activity_disp11.xml
@@ -7,25 +7,31 @@
         android:layout_height="match_parent"
         tools:context=".Disp11">
     <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/strQuestion"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="@string/strQuestion"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:ems="10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/strQuestion"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            android:inputType="textMultiLine|textPersonName"
+            android:lines="3" android:maxLength="60"
+            android:maxLines="3" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
     <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/strAnswer"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="@string/strAnswer"
-            android:ems="10"
-            android:id="@+id/strAnswer" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            android:ems="10" android:inputType="textMultiLine|textPersonName"
+            android:lines="3"
+            android:maxLength="60"
+            android:maxLines="3" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/strQuestion"/>
     <Button
             android:text="@string/btnCancel"
