--- a/app/src/main/res/layout/content_disp21.xml
+++ b/app/src/main/res/layout/content_disp21.xml
@@ -13,7 +13,7 @@
             android:text="理科(とか)"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/list" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/btnWarpDisp02" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
