--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -61,4 +61,14 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:onClick="tap_btnFileTest"/>
 
+    <Button
+            android:id="@+id/btnNotifiSetting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="tap_btnNotifiSetting"
+            android:text="通知設定"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
