--- a/app/src/main/res/layout/activity_disp07.xml
+++ b/app/src/main/res/layout/activity_disp07.xml
@@ -25,19 +25,18 @@
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp" android:textSize="36sp"
             app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.451"/>
     <Button
-            android:text="@string/btnBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnBack" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:onClick="tap_btnBack"/>
+            android:id="@+id/btnBack"
+            android:layout_width="200dp"
+            android:layout_height="75dp"
+            android:onClick="tap_btnBack" android:text="@string/btnBack"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"/>
     <Button
-            android:text="@string/btnNext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnNext" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="tap_btnNext"/>
+            android:id="@+id/btnNext"
+            android:layout_width="200dp"
+            android:layout_height="75dp"
+            android:onClick="tap_btnNext"
+            android:text="@string/btnNext" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <Button
             android:text="@string/btnChange"
             android:layout_width="wrap_content"
