--- a/app/src/main/res/layout/activity_disp11.xml
+++ b/app/src/main/res/layout/activity_disp11.xml
@@ -34,17 +34,17 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/strQuestion"/>
     <Button
-            android:text="@string/btnCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnCancel" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:onClick="tap_btnCancel"/>
+            android:id="@+id/btnCancel"
+            android:layout_width="200dp"
+            android:layout_height="75dp"
+            android:onClick="tap_btnCancel"
+            android:text="@string/btnCancel" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     <Button
-            android:text="@string/btnDone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnDone" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="tap_btnDone"/>
+            android:id="@+id/btnDone"
+            android:layout_width="200dp"
+            android:layout_height="75dp"
+            android:onClick="tap_btnDone"
+            android:text="@string/btnDone" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
