--- a/app/src/main/res/layout/activity_disp18.xml
+++ b/app/src/main/res/layout/activity_disp18.xml
@@ -18,27 +18,27 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"/>
     <Button
-            android:text="@string/btnDisp"
+            android:id="@+id/btnDisp"
             android:layout_width="406dp"
             android:layout_height="80dp"
-            android:id="@+id/btnDisp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:textSize="30sp" android:onClick="tap_btnDisp"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" android:onClick="tap_btnDisp"
+            android:text="@string/btnDisp" android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
     <Button
-            android:text="@string/btnNG"
+            android:id="@+id/btnNG"
             android:layout_width="135dp"
             android:layout_height="80dp"
-            android:id="@+id/btnNG" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/btnDisp"
-            android:layout_marginStart="8dp" android:onClick="tap_btnNG" android:visibility="invisible"/>
+            android:layout_marginStart="8dp"
+            android:onClick="tap_btnNG" android:text="@string/btnNG"
+            android:visibility="invisible" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/btnDisp"/>
     <Button
-            android:text="@string/btnOK"
+            android:id="@+id/btnOK"
             android:layout_width="145dp"
             android:layout_height="80dp"
-            android:id="@+id/btnOK" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:onClick="tap_btnOK" android:visibility="invisible"/>
+            android:layout_marginEnd="8dp"
+            android:onClick="tap_btnOK" android:text="@string/btnOK"
+            android:visibility="invisible" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="@string/txtAnswer"
             android:layout_width="wrap_content"
