--- a/app/src/main/res/layout/activity_disp22.xml
+++ b/app/src/main/res/layout/activity_disp22.xml
@@ -16,11 +16,12 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
-            android:text="HOMEへ"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/btnHome" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:onClick="tap_btnHome"/>
+            android:id="@+id/btnHome"
+            android:layout_width="254dp"
+            android:layout_height="85dp"
+            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
+            android:onClick="tap_btnHome" android:text="HOMEへ"
+            android:textSize="30sp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
