--- a/app/src/main/res/layout/content_disp02.xml
+++ b/app/src/main/res/layout/content_disp02.xml
@@ -10,15 +10,6 @@
         tools:context=".Disp02">
 
     <Button
-            android:text="Button"
-            android:layout_width="239dp"
-            android:layout_height="68dp"
-            android:id="@+id/btnWarpDisp02" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.202"
-            app:layout_constraintVertical_bias="0.055" android:onClick="tap_btnList"/>
-    <Button
             android:text="編集"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_marginEnd="16dp"
@@ -36,4 +27,8 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.973" app:layout_constraintVertical_bias="0.165"/>
+    <Button
+            android:id="@+id/btnDisp07"
+            android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Button"
+            tools:layout_editor_absoluteX="33dp" tools:layout_editor_absoluteY="58dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
