--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -10,11 +10,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/checkBox" android:visibility="gone"/>
     <Button
-            android:id="@+id/button"
-            android:layout_width="289dp"
+            android:id="@+id/btnt"
+            android:layout_width="392dp"
             android:layout_height="wrap_content"
-            android:text="Button"
-            android:textSize="18sp"/>
+            android:text="Button" android:textSize="18sp"/>
 
 
 </TableRow>
