--- a/app/src/main/res/layout/content_disp02.xml
+++ b/app/src/main/res/layout/content_disp02.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.973" app:layout_constraintVertical_bias="0.165"/>
     <Button
-            android:id="@+id/btnDisp07"
+            android:id="@+id/btndisp07"
             android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Button"
             tools:layout_editor_absoluteX="33dp" tools:layout_editor_absoluteY="58dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
