--- a/app/src/main/res/menu/mainactivity_menu.xml
+++ b/app/src/main/res/menu/mainactivity_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/Edit" android:title="編集"/>
+    <item android:id="@+id/End" android:title="編集"/>
     <item android:id="@+id/Delete" android:title="削除"/>
     <item android:id="@+id/NotSetting" android:title="通知設定"/>
     <item android:id="@+id/Import" android:title="インポート"/>
