--- a/app/src/main/res/layout/content_disp02.xml
+++ b/app/src/main/res/layout/content_disp02.xml
@@ -33,17 +33,17 @@
             tools:layout_editor_absoluteX="33dp" tools:layout_editor_absoluteY="58dp"/>
 
     <ScrollView
-            android:layout_width="403dp"
-            android:layout_height="588dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.597">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:orientation="vertical">
             <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:id="@+id/tableLayout"/>
+                    android:id="@+id/tableLayout"
+                    android:layout_width="match_parent" android:layout_height="match_parent"/>
         </LinearLayout>
     </ScrollView>
 
