--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content" android:id="@+id/checkBox" android:visibility="gone"/>
     <Button
             android:id="@+id/btnt"
-            android:layout_width="392dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Button" android:textSize="18sp"/>
 
