--- a/app/src/main/res/layout/content_disp02.xml
+++ b/app/src/main/res/layout/content_disp02.xml
@@ -23,6 +23,22 @@
                     android:layout_width="match_parent" android:layout_height="match_parent"/>
         </LinearLayout>
     </ScrollView>
+    <Button
+            android:id="@+id/btncancel"
+            android:layout_width="160dp"
+            android:layout_height="60dp"
+            android:text="キャンセル" android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.11" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.862"/>
+    <Button
+            android:id="@+id/btndelApply"
+            android:layout_width="142dp"
+            android:layout_height="54dp"
+            android:text="削除" android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.851" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.95"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
