--- a/app/src/main/res/layout/multitable.xml
+++ b/app/src/main/res/layout/multitable.xml
@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:paddingVertical="5dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingVertical="5dp">
 
     <CheckBox
             android:choiceMode ="multipleChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/checkBox" android:visibility="gone"/>
-    <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content" android:layout_height="148dp" android:scaleType="fitXY"
-            app:srcCompat="@drawable/multi"/>
+
+    <Button
+            android:id="@+id/btnt"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:layout_margin="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/multi"
+            android:padding="0dp"
+            android:paddingStart="0dp"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="0dp"
+            android:text="Button"
+            android:textAlignment="center"
+            android:textSize="24dp" />
 
 
 </TableRow>
