--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -9,18 +9,28 @@
             android:choiceMode ="multipleChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/checkBox" android:visibility="gone"/>
+
     <Button
             android:id="@+id/btnt"
-            android:layout_width="401dp"
+            android:layout_width="392dp"
             android:layout_height="94dp"
             android:layout_margin="0dp"
-            android:layout_marginStart="0dp" android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp" android:layout_marginEnd="0dp" android:layout_marginRight="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
             android:layout_marginBottom="0dp"
-            android:background="@drawable/single" android:padding="0dp" android:paddingStart="0dp"
+            android:background="@drawable/single"
+            android:padding="0dp"
+            android:paddingStart="0dp"
             android:paddingLeft="0dp"
-            android:paddingTop="0dp" android:paddingEnd="0dp" android:paddingRight="0dp" android:paddingBottom="0dp"
-            android:text="Button" android:textSize="24dp"/>
+            android:paddingTop="0dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="0dp"
+            android:text="Button"
+            android:textSize="24dp" />
 
 
 </TableRow>
